# openpolvo

./: .gitignore  setup.ps1
openpolvointeligence/: .env.example  .gitignore  README.md  openpolvointel.spec  pyproject.toml  run_intel.py
openpolvointeligence/src/openpolvointeligence/: __init__.py  main.py
openpolvointeligence/src/openpolvointeligence/api/: app.py  deps.py  llm_merge.py  routes.py  schemas.py
openpolvointeligence/src/openpolvointeligence/core/: config.py
openpolvointeligence/src/openpolvointeligence/graphs/: agent_memory_utils.py  builder_subgraph.py  email_send_quality.py  finance_context.py  message_utils.py  models.py  native_plugins.py  preview_console_context.py  scheduled_task_metadata.py  site_research_subgraph.py  skills_budget.py  social_generator.py  task_list_metadata.py  web_page_fetch.py  web_research_intent.py  web_research_serpapi.py  web_research_subgraph.py  web_url_extract.py  workflow_llm.py  zepolvinho_graph.py
openpolvointeligence/src/openpolvointeligence/prompts/: analyzer_system.md  response_formatting.md  specialist_agendamento.md  specialist_automacao.md  specialist_config.md  specialist_conversa.md  specialist_criacao_automacao.md  specialist_criacao_email.md  specialist_criacao_sistema_web.md  specialist_duvida.md  specialist_financas_pessoais.md  specialist_geracao_midia_ai.md  specialist_geral.md  specialist_gestao_tarefas_calendario.md  specialist_pedido_conteudo.md  specialist_suporte.md  (+8 more)
openpolvointeligence/tests/: test_email_send_quality.py  test_health.py  test_web_research_intent.py  test_web_url_extract.py
(+390 files in other folders)
