[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openpolvointeligence"
version = "0.1.0"
description = "Serviço Open Polvo Intelligence — LangGraph + FastAPI (agente Zé Polvinho e LLM de workflows)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.6.0",
  "langgraph>=0.2.0",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-google-genai>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pyinstaller>=6.0",
]

[project.scripts]
openpolvo-intel = "openpolvointeligence.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/openpolvointeligence"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
